Imported from https://haipnh-bv@github.com/haipnh-bv/gerrit-example.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/haipnh-bv
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/haipnh-bv
+	label-Verified = -1..+1 group user/haipnh-bv
+	push = group user/haipnh-bv
+	read = group user/haipnh-bv
+	rebase = group user/haipnh-bv
+	removeReviewer = group user/haipnh-bv
+	submit = group user/haipnh-bv
+[access "refs/heads/*"]
+	create = group user/haipnh-bv
+	push = +force group user/haipnh-bv
+	pushMerge = group user/haipnh-bv
+	read = group user/haipnh-bv
+[access "refs/tags/*"]
+	push = group user/haipnh-bv
+	push = +force group user/haipnh-bv
